# SuiYe.new_lang

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  build.bat  clean.bat  install_path.bat  quality_gate.bat  release.bat
docs/: ABI_VERSIONING.md  CROSS_PLATFORM.md  DEVELOPER_GUIDE.md  EMBEDDING.md  ERROR_CODES.md  INDUSTRIAL_GRADE.md  MODULE_COMMANDS.md  PACK_REVERSE.md  QUICK_START.md  SUIDB.md  TOOLS.md
embeddings/: README.md
embeddings/autohotkey/: README.md  example.ahk
embeddings/autoit/: README.md  example.au3
embeddings/c/: README.md  example.c
embeddings/clojure/: README.md  core.clj
embeddings/cobol/: README.md  example.cob
embeddings/cpp/: README.md  example.cpp
embeddings/crystal/: README.md  example.cr
embeddings/csharp/: Program.cs  README.md
embeddings/d/: README.md  app.d
embeddings/dart/: README.md  example.dart
embeddings/delphi/: Example.pas  README.md
embeddings/deno/: README.md  example.ts
embeddings/elixir/: README.md  example.exs
embeddings/erlang/: README.md  example.erl
embeddings/fortran/: README.md  example.f90
embeddings/freepascal/: README.md  example.pas
embeddings/fsharp/: Program.fs  README.md
embeddings/go/: README.md  main.go
embeddings/groovy/: README.md  example.groovy
embeddings/haskell/: Main.hs  (+1 more)
examples/: all_syntax.sye  bindings_note.md  file_ops.sye  generated_gui.html  hello.sye  loop_text.sye  out.txt  round5_regression.sye
include/: suiye_api.h  suiye_backend.h  suiye_crash.h  suiye_embed.h  suiye_platform.h  sye_ast.h  sye_lexer.h  sye_runtime.h  sye_scope.h  sye_value.h
key/: pem.key  pem.pem
modules/: eco_module.c  native_industrial.c  pack_it_up.c  reverse.c  ssl_certificate.c
src/: suiye.c  suiye_backend.c  suiye_cli.c  suiye_crash.c  suiye_embed.c  suiye_platform.c  sye_ast.c  sye_lexer.c  sye_runtime.c  sye_scope.c  sye_value.c
tests/: README.md  core_part1_check.sye  core_part1_value_scope_test.c  core_part2_ast_runtime.sye  core_part3_active_include_error.sye  core_part3_active_include_payload.sye  core_part3_ast_runtime.sye  core_part3_error.sye  core_part3_error_include.sye  core_part3_include.sye  core_part3_module_error.sye  dll_ast_dispatch.sye  dll_industrial_baseline.sye  embed_c_test.c  embed_stress_test.c  high_depth_native.sye  native_industrial_modules.sye  pack_resource.txt  run_all.bat  self_research_100.sye
tools/: fuzz_suiye.py  long_stress.py  run_drmemory.ps1  run_sanitizers.sh  run_valgrind.sh  suiye_lsp.py  suiye_pkg.py
(+53 files in other folders)
